[gd_scene load_steps=11 format=3 uid="uid://djcfm0pl15x87"]

[ext_resource type="Script" path="res://Scripts/SubComponents/GraphNodeSelector.gd" id="1_5l6lg"]
[ext_resource type="Texture2D" uid="uid://3cbk6gtd8pis" path="res://Assets/Icons/NodesIcons/Sentence.svg" id="1_ojtey"]
[ext_resource type="Texture2D" uid="uid://cpirwf2kaphk0" path="res://Assets/Icons/NodesIcons/Multiple Choice.svg" id="2_637k5"]
[ext_resource type="Texture2D" uid="uid://duc8w81evfnqw" path="res://Assets/Icons/NodesIcons/DiceRoll.svg" id="3_sek5i"]
[ext_resource type="Texture2D" uid="uid://bmfs6iest7723" path="res://Assets/Icons/NodesIcons/Link.svg" id="4_jn2ww"]
[ext_resource type="Texture2D" uid="uid://bsfr18fogqxnt" path="res://Assets/Icons/NodesIcons/Condition.svg" id="5_ub1y7"]
[ext_resource type="Texture2D" uid="uid://cii2dk8aqnx3m" path="res://Assets/Icons/NodesIcons/Cog.svg" id="6_g0cul"]
[ext_resource type="Texture2D" uid="uid://kqhi8rimv1go" path="res://Assets/Icons/NodesIcons/Exit.svg" id="7_d1a3x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qj61b"]
bg_color = Color(0.128906, 0.148438, 0.179688, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 35.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_whi7p"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.128906, 0.148438, 0.179688, 1)

[node name="GraphNodeSelector" type="Window"]
auto_translate_mode = 1
title = "Graph Node Picker"
position = Vector2i(0, 36)
size = Vector2i(210, 305)
visible = false
unresizable = true
always_on_top = true
popup_window = true
extend_to_title = true
content_scale_mode = 1
theme_override_styles/embedded_border = SubResource("StyleBoxFlat_qj61b")
script = ExtResource("1_5l6lg")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_whi7p")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="SentenceSelector" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Node Sentence"
icon = ExtResource("1_ojtey")

[node name="ChoiceSelector" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Node Choice"
icon = ExtResource("2_637k5")

[node name="DiceRollSelector" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Node DiceRoll"
icon = ExtResource("3_sek5i")

[node name="BridgeSelector" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Nodes Bridge"
icon = ExtResource("4_jn2ww")

[node name="ConditionSelector" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Node Condition"
icon = ExtResource("5_ub1y7")

[node name="ActionSelector" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Node Action"
icon = ExtResource("6_g0cul")

[node name="AudioSelector" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Node Audio"

[node name="SetterSelector" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Node Setter"

[node name="EndPathSelector" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Node EndPath"
icon = ExtResource("7_d1a3x")

[connection signal="close_requested" from="." to="." method="disable_picker_mode"]
[connection signal="focus_exited" from="." to="." method="disable_picker_mode"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/SentenceSelector" to="." method="_on_selector_btn_pressed" binds= ["Sentence"]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ChoiceSelector" to="." method="_on_selector_btn_pressed" binds= ["Choice"]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/DiceRollSelector" to="." method="_on_selector_btn_pressed" binds= ["DiceRoll"]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/BridgeSelector" to="." method="_on_selector_btn_pressed" binds= ["Bridge"]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ConditionSelector" to="." method="_on_selector_btn_pressed" binds= ["Condition"]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ActionSelector" to="." method="_on_selector_btn_pressed" binds= ["Action"]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/AudioSelector" to="." method="_on_selector_btn_pressed" binds= ["Audio"]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/SetterSelector" to="." method="_on_selector_btn_pressed" binds= ["Setter"]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/EndPathSelector" to="." method="_on_selector_btn_pressed" binds= ["EndPath"]]
